# mini-search

./: .gitignore  CMakeLists.txt  run.txt
src/: InvertedIndex.cpp  InvertedIndex.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp  query_processor.cpp  tf-idf.cpp
